--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header{
     width:1204px;
     height:43.5px;
     margin-top:30px;
+    position:fixed;
 }
 nav a{
     color:white;
@@ -141,4 +142,19 @@ section h1{
     font-size:20px;
     color:#18181B;
     font-family: "Inter", serif;
+}
+.cont1 div{
+    width:513px;
+    height:112px;
+    margin-left:120px;
+}
+.cont1 img{
+    width:14px;
+    height:14px;
+}
+.cont1 span{
+    margin-left:0.5px;
+}
+.div1{
+    background-color:#EEE9D9;
 }
