--- a/style.css
+++ b/style.css
@@ -101,16 +101,32 @@ section h1{
     width:247.5px;
     height:370px;
     border-radius:40px;
-    box-shadow:5px 5px #9DB8DA;
+    box-shadow:#9DB8DA 10px 10px, #9DB8DA -10px -10px;
     color:white;
     text-align:center;
     background-size:cover;
     background-position:center;
 }
+.black{
+    opacity:0;
+    position:absolute;
+    z-index:1;
+    border-radius:40px;
+    background-color:#000000;
+    width:220px;
+    height:370px;
+    transition: all 0.5s ease-in-out;
+}
+.black:hover{
+    opacity:0.5;
+}
 .text-card{
+    position:relative;
+    z-index:2;
     margin:141px 10px 141px 10px;
     font-family: "Bebas Neue", serif;
     font-size:37px;
+    color:white;
 }
 .first{
     background-image:url("Img/Hovercardimage2.png");
@@ -143,18 +159,125 @@ section h1{
     color:#18181B;
     font-family: "Inter", serif;
 }
-.cont1 div{
+.cont1{
+    margin-top:50px;
+}
+.divs{
     width:513px;
     height:112px;
     margin-left:120px;
+    border-radius:999999px;
+    position:relative;
+    opacity:0.8;
+}
+.divs:hover{
+    border:5px solid white;
 }
 .cont1 img{
     width:14px;
     height:14px;
+    margin:30px 0px 0px 20px;
 }
-.cont1 span{
-    margin-left:0.5px;
+h2{
+    position:relative;
+    display:inline;
+    top:20px;
+    left:22.5px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.cities{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin:30px 0px 0px 20.5px;
 }
 .div1{
     background-color:#EEE9D9;
+}
+.div2{
+    background-color:#8BB8C1;
+    margin-top:20px;
+}
+.div3{
+    background-color:#AAD8D7;
+    margin-top:20px;
+}
+.div4{
+    background-color:#8BC0BD;
+    margin-top:20px;
+}
+.div5{
+    background-color:#97CCE0;
+    margin-top:20px;
+}
+.days{
+    position:relative;
+    left:85%;
+    bottom:45%;
+    font-family: "Bebas Neue", serif;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width:52px;
+    height:52px;
+    border-radius:100%;
+    background-color:#F7F6F3;
+}
+.fourth-page{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    background-image:url("Img/Price&Footerimage.png");
+    width:1440px;
+    height:1120px;
+}
+.head{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display:flex;
+    flex-direction:column;
+    text-align:center;
+}
+.head h1{
+    font-size:42px;
+}
+.head span{
+    margin-top:15px;
+}
+.cont2{
+    margin-top:80px;
+    display:flex;
+    gap:24px;
+    width:1200px;
+    height:527px;
+}
+.price{
+    width:384px;
+    height:527px;
+}
+
+.price-header img{
+    width:36px;
+    height:36px;
+}
+.cont2-span{
+    font-size:18px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.price-header{
+    display:flex;
+    gap:16px;
+    align-items:center;
+}
+.section h1{
+    font-size:40px;
+    font-weight:bold;
+    font-family: "Montserrat", serif;
+    padding-bottom:15px;
+}
+.section h3{
+    display:inline;
+    font-size:16px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:#919191;
+}
+.popular{
+    margin-left:60px;
 }
