--- a/style.css
+++ b/style.css
@@ -141,6 +141,7 @@ section h1{
     background-image:url("Img/Hovercardimage.png");
 }
 .third-page{
+    position:relative;
     width:1440px;
     height:1022px;
     background-image:url("Img/Roadmapimage.png");
@@ -173,19 +174,25 @@ section h1{
 .divs:hover{
     border:5px solid white;
 }
-.cont1 img{
+.divs img{
+    position:absolute;
+    top:40px;
+
     width:14px;
     height:14px;
     margin:30px 0px 0px 20px;
 }
 h2{
-    position:relative;
+    position:absolute;
     display:inline;
-    top:20px;
+    top:30px;
     left:22.5px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .cities{
+    position:absolute;
+    top:34px;
+    left:28px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin:30px 0px 0px 20.5px;
 }
@@ -209,9 +216,9 @@ h2{
     margin-top:20px;
 }
 .days{
-    position:relative;
+    position:absolute;
     left:85%;
-    bottom:45%;
+    top:28px;
     font-family: "Bebas Neue", serif;
     display:flex;
     justify-content:center;
@@ -251,6 +258,9 @@ h2{
 .price{
     width:384px;
     height:527px;
+    background-color:#FAFBFC;
+    border-radius:40px;
+    padding:30px 25px 15px 25px;
 }
 
 .price-header img{
@@ -279,5 +289,119 @@ h2{
     color:#919191;
 }
 .popular{
-    margin-left:60px;
+    font-size:16px;
+    font-weight:bold;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:white;
+    background-color:#6972B5;
+    border-radius:9999px;
+    padding:4px 16px 4px 16px;
+    margin-left:80px;
+}
+.section1{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top:38px;
+}
+.section1 p{
+    font-weight:bold;
+    margin-left:40px;
+    font-size:18px;
+}
+ul{
+    display:flex;
+    flex-direction:column;
+    gap:17.5px;
+
+}
+ul li{
+    position:relative;
+    list-style-type:none;
+    left:30px;
+}
+Ul li::before{
+    content:'';
+    transform:translate(-30px);
+    position:absolute;
+    width:20px;
+    height:20px;
+    background-image:url("Img/Icons/check.png");
+    background-size:cover;
+}
+.button{
+    display:flex;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top:37px;
+    margin-inline:auto;
+    width:336px;
+    height:48px;
+    background-color:#A4D1E2;
+    font-size:16px;
+    font-weight:bold;
+    align-items:center;
+    justify-content:center;
+    border-radius:9999px;
+}
+.down{
+    margin-top:58px;
+}
+.pins{
+    position:absolute;
+    width:34px;
+    height:34px;
+}
+#first{
+    left:749px;
+    top:230px;
+}
+#second{
+    left:952px;
+    top:306px;
+}
+#third{
+    left:780px;
+    top:428px;
+}
+#fourth{
+    left:1165px;
+    top:445px;
+}
+#fifth{
+    left:952px;
+    top:680px;
+}
+footer{
+    position:relative;
+    width:1440px;
+    height:204px;
+    margin-top:185px;
+}
+footer div{
+    background-color:#FAFBFC;
+    position:absolute;
+    display:flex;
+    border-radius:9999px;
+    padding:10px 20px 10px 20px;
+    gap:10px;
+    top:50%;
+}
+.contact span{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:18px;
+    font-weight:bold;
+    color:#6972B5;
+}
+.contact img{
+    width: 24px;
+    height:24px;
+}
+.logoFinale{
+    position:absolute;
+    top:50%;
+    right:120px;
+}
+.F{
+    left:120px;
+}
+.I{
+    left:307px;
 }
